--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>뽑기판 - Magic Gacha</title>
-    <meta name="description" content="화려한 이펙트가 있는 뽑기 시스템" />
+    <title>뽑기판 - Gatchacha</title>
+    <meta name="description" content="인터넷 뽑기 시스템" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="뽑기판 - Magic Gacha" />
-    <meta property="og:description" content="화려한 이펙트가 있는 뽑기 시스템" />
+    <meta property="og:title" content="뽑기판 - Gatchacha" />
+    <meta property="og:description" content="인터넷 뽑기 시스템" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
